--- a/src/html/head.html
+++ b/src/html/head.html
@@ -23,8 +23,12 @@
 	<link rel="canonical" href="" />
 
 	<!--Преконекты к дополнительно подключаемым ресурсам-->
-	<link rel="preconnect" href="//fonts.gstatic.com" />
-	<link rel="preconnect" href="//cdnjs.cloudflare.com" />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link
+		href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Poppins:wght@300;400;500;600;700&display=swap"
+		rel="stylesheet"
+	/>
 
 	<!-- Название сайта на рабочем столе apple -->
 	<meta name="apple-mobile-web-app-title" content="@@nameSite" />
